Closed Bug 1663576 Opened 4 years ago Closed 4 years ago

Crash at gfxPlatform::Init()

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Crash Data

Attachments

(1 file)

Regressed by: 1460959
Has Regression Range: --- → yes
Pushed by abutkovits@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bec22737af47
[Linux] Don't use gfxPlatformGtk() at nsWindow::IsMainWindowTransparent(), r=jhorak

Set release status flags based on info from the regressing bug 1460959

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Crash Signature: [@ gfxPlatform::Init | nsWindow::IsMainWindowTransparent]

Oddly enough we're seeing new crashes with this stack under a new signature, see this one for example. The buildid is 20200918094500 so it should have the fix that landed here.

Flags: needinfo?(stransky)

(In reply to Gabriele Svelto [:gsvelto] from comment #6)

Oddly enough we're seeing new crashes with this stack under a new signature, see this one for example. The buildid is 20200918094500 so it should have the fix that landed here.

Touche, Thanks! I need to fix this place too.

Flags: needinfo?(stransky)

(In reply to Martin Stránský [:stransky] from comment #7)

(In reply to Gabriele Svelto [:gsvelto] from comment #6)

Oddly enough we're seeing new crashes with this stack under a new signature, see this one for example. The buildid is 20200918094500 so it should have the fix that landed here.

Touche, Thanks! I need to fix this place too.

Filed as Bug 1666176.

See Also: → 1666176
Priority: P3 → P2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: