Bug 1663576 [Linux] Don't use gfxPlatformGtk() at nsWindow::IsMainWindowTransparent(), r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D89417